syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message RecipePictureUploadLink {
  string pictureId = 1;
  string link = 2;
  map<string, string> formData = 3;
}

message GenerateRecipePicturesUploadLinksRequest {
  string recipeId = 1;
  string userId = 2;
  int32 picturesCount = 3;
  string subscription = 4;
}

message GenerateRecipePicturesUploadLinksResponse {
  repeated RecipePictureUploadLink links = 1;
}
