syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message RecipePictures {
  optional string preview = 1;
  map<string, StepPictures> cooking = 2;
}

message StepPictures {
  repeated string pictures = 1;
}